# OpenGL-Engine

./: .gitignore  CMakeLists.txt  README.md
engine/: engine.cpp  engine.h
engine/entities/: camera.cpp  camera.h
engine/graphics/: renderer.cpp  renderer.h
engine/input/: input.cpp  input.h
engine/platform/: window.cpp  window.h
game/: main.cpp
includes/tools/: loadtexture.cpp  loadtexture.h  mesh.h  model.h  shader.h
shaders/: depthShader.fs  shader.fs  shader.vs
